--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,48 +4,303 @@
 #
 #    pip-compile requirements-dev.in
 #
-attrs==19.3.0             # via -c requirements.txt, pytest
-backcall==0.1.0           # via ipython
-certifi==2019.11.28       # via -c requirements.txt, requests
-chardet==3.0.4            # via -c requirements.txt, requests
-click==7.0                # via -c requirements.txt, pip-tools
-cram==0.7                 # via -r requirements-dev.in
-decorator==4.4.1          # via ipython, traitlets
-digitalmarketplace-test-utils==2.8.2  # via -r requirements-dev.in
-entrypoints==0.3          # via flake8
-flake8==3.7.9             # via -r requirements-dev.in
-freezegun==0.3.15         # via -r requirements-dev.in
-idna==2.9                 # via -c requirements.txt, requests
-importlib-metadata==1.5.0  # via -c requirements.txt, pluggy, pytest
-ipython-genutils==0.2.0   # via -r requirements-dev.in, traitlets
-ipython==7.12.0           # via -r requirements-dev.in
-jedi==0.16.0              # via ipython
-lxml==4.6.2               # via -r requirements-dev.in
-mccabe==0.6.1             # via flake8
-mock==3.0.5               # via -r requirements-dev.in
-more-itertools==8.2.0     # via pytest
-packaging==20.1           # via pytest
-parso==0.6.1              # via jedi
-pexpect==4.8.0            # via ipython
-pickleshare==0.7.5        # via ipython
-pip-tools==5.5.0          # via -r requirements-dev.in
-pluggy==0.13.1            # via pytest
-prompt-toolkit==3.0.3     # via ipython
-ptyprocess==0.6.0         # via pexpect
-py==1.8.1                 # via pytest
-pycodestyle==2.5.0        # via flake8
-pyflakes==2.1.1           # via flake8
-pygments==2.5.2           # via ipython
-pyparsing==2.4.6          # via packaging
-pytest==5.3.5             # via -r requirements-dev.in
-python-dateutil==2.8.1    # via -c requirements.txt, freezegun
-requests-mock==1.7.0      # via -r requirements-dev.in
-requests==2.23.0          # via -c requirements.txt, requests-mock
-six==1.14.0               # via -c requirements.txt, freezegun, mock, packaging, python-dateutil, requests-mock, traitlets
-traitlets==4.3.3          # via ipython
-urllib3==1.25.10          # via -c requirements.txt, requests
-wcwidth==0.1.8            # via prompt-toolkit, pytest
-zipp==3.0.0               # via -c requirements.txt, importlib-metadata
+appnope==0.1.2
+    # via
+    #   ipykernel
+    #   ipython
+argon2-cffi==20.1.0
+    # via notebook
+async-generator==1.10
+    # via nbclient
+attrs==19.3.0
+    # via
+    #   -c requirements.txt
+    #   jsonschema
+    #   pytest
+backcall==0.1.0
+    # via ipython
+bleach==3.3.0
+    # via nbconvert
+certifi==2019.11.28
+    # via
+    #   -c requirements.txt
+    #   requests
+cffi==1.14.0
+    # via
+    #   -c requirements.txt
+    #   argon2-cffi
+chardet==3.0.4
+    # via
+    #   -c requirements.txt
+    #   requests
+click==7.0
+    # via
+    #   -c requirements.txt
+    #   pip-tools
+cram==0.7
+    # via -r requirements-dev.in
+decorator==4.4.1
+    # via
+    #   ipython
+    #   traitlets
+defusedxml==0.6.0
+    # via
+    #   -c requirements.txt
+    #   nbconvert
+digitalmarketplace-test-utils==2.8.2
+    # via -r requirements-dev.in
+entrypoints==0.3
+    # via
+    #   flake8
+    #   nbconvert
+flake8==3.7.9
+    # via -r requirements-dev.in
+freezegun==0.3.15
+    # via -r requirements-dev.in
+idna==2.9
+    # via
+    #   -c requirements.txt
+    #   requests
+importlib-metadata==1.5.0
+    # via
+    #   -c requirements.txt
+    #   jsonschema
+    #   pluggy
+    #   pytest
+ipykernel==5.5.0
+    # via
+    #   ipywidgets
+    #   jupyter
+    #   jupyter-console
+    #   notebook
+    #   qtconsole
+ipython-genutils==0.2.0
+    # via
+    #   -r requirements-dev.in
+    #   nbformat
+    #   notebook
+    #   qtconsole
+    #   traitlets
+ipython==7.12.0
+    # via
+    #   -r requirements-dev.in
+    #   ipykernel
+    #   ipywidgets
+    #   jupyter-console
+ipywidgets==7.6.3
+    # via jupyter
+jedi==0.16.0
+    # via ipython
+jinja2==2.10.3
+    # via
+    #   -c requirements.txt
+    #   nbconvert
+    #   notebook
+joblib==1.0.1
+    # via scikit-learn
+jsonschema==3.2.0
+    # via
+    #   -c requirements.txt
+    #   nbformat
+jupyter-client==6.1.11
+    # via
+    #   ipykernel
+    #   jupyter-console
+    #   nbclient
+    #   notebook
+    #   qtconsole
+jupyter-console==6.2.0
+    # via jupyter
+jupyter-core==4.7.1
+    # via
+    #   jupyter-client
+    #   nbconvert
+    #   nbformat
+    #   notebook
+    #   qtconsole
+jupyter==1.0.0
+    # via -r requirements-dev.in
+jupyterlab-pygments==0.1.2
+    # via nbconvert
+jupyterlab-widgets==1.0.0
+    # via ipywidgets
+lxml==4.6.2
+    # via -r requirements-dev.in
+markupsafe==1.1.1
+    # via
+    #   -c requirements.txt
+    #   jinja2
+mccabe==0.6.1
+    # via flake8
+mistune==0.8.4
+    # via nbconvert
+mock==3.0.5
+    # via -r requirements-dev.in
+more-itertools==8.2.0
+    # via pytest
+nbclient==0.5.2
+    # via nbconvert
+nbconvert==6.0.7
+    # via
+    #   jupyter
+    #   notebook
+nbformat==5.1.2
+    # via
+    #   ipywidgets
+    #   nbclient
+    #   nbconvert
+    #   notebook
+nest-asyncio==1.5.1
+    # via nbclient
+notebook==6.2.0
+    # via
+    #   jupyter
+    #   widgetsnbextension
+numpy==1.19.5
+    # via
+    #   pandas
+    #   scikit-learn
+    #   scipy
+packaging==20.1
+    # via
+    #   bleach
+    #   pytest
+pandas==1.1.5
+    # via -r requirements-dev.in
+pandocfilters==1.4.3
+    # via nbconvert
+parso==0.6.1
+    # via jedi
+pexpect==4.8.0
+    # via ipython
+pickleshare==0.7.5
+    # via ipython
+pip-tools==5.5.0
+    # via -r requirements-dev.in
+pluggy==0.13.1
+    # via pytest
+prometheus-client==0.2.0
+    # via
+    #   -c requirements.txt
+    #   notebook
+prompt-toolkit==3.0.3
+    # via
+    #   ipython
+    #   jupyter-console
+ptyprocess==0.6.0
+    # via
+    #   pexpect
+    #   terminado
+py==1.8.1
+    # via pytest
+pycodestyle==2.5.0
+    # via flake8
+pycparser==2.19
+    # via
+    #   -c requirements.txt
+    #   cffi
+pyflakes==2.1.1
+    # via flake8
+pygments==2.5.2
+    # via
+    #   ipython
+    #   jupyter-console
+    #   jupyterlab-pygments
+    #   nbconvert
+    #   qtconsole
+pyparsing==2.4.6
+    # via packaging
+pyrsistent==0.15.7
+    # via
+    #   -c requirements.txt
+    #   jsonschema
+pytest==5.3.5
+    # via -r requirements-dev.in
+python-dateutil==2.8.1
+    # via
+    #   -c requirements.txt
+    #   freezegun
+    #   jupyter-client
+    #   pandas
+pytz==2019.3
+    # via
+    #   -c requirements.txt
+    #   pandas
+pyzmq==22.0.3
+    # via
+    #   jupyter-client
+    #   notebook
+    #   qtconsole
+qtconsole==5.0.2
+    # via jupyter
+qtpy==1.9.0
+    # via qtconsole
+requests-mock==1.7.0
+    # via -r requirements-dev.in
+requests==2.23.0
+    # via
+    #   -c requirements.txt
+    #   requests-mock
+scikit-learn==0.24.1
+    # via sklearn
+scipy==1.5.4
+    # via scikit-learn
+send2trash==1.5.0
+    # via notebook
+six==1.14.0
+    # via
+    #   -c requirements.txt
+    #   argon2-cffi
+    #   bleach
+    #   freezegun
+    #   jsonschema
+    #   mock
+    #   packaging
+    #   python-dateutil
+    #   requests-mock
+    #   traitlets
+sklearn==0.0
+    # via -r requirements-dev.in
+terminado==0.9.2
+    # via notebook
+testpath==0.4.4
+    # via nbconvert
+threadpoolctl==2.1.0
+    # via scikit-learn
+tornado==6.1
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   notebook
+    #   terminado
+traitlets==4.3.3
+    # via
+    #   ipykernel
+    #   ipython
+    #   ipywidgets
+    #   jupyter-client
+    #   jupyter-core
+    #   nbclient
+    #   nbconvert
+    #   nbformat
+    #   notebook
+    #   qtconsole
+urllib3==1.25.10
+    # via
+    #   -c requirements.txt
+    #   requests
+wcwidth==0.1.8
+    # via
+    #   prompt-toolkit
+    #   pytest
+webencodings==0.5.1
+    # via bleach
+widgetsnbextension==3.5.1
+    # via ipywidgets
+zipp==3.0.0
+    # via
+    #   -c requirements.txt
+    #   importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
